Fix global text centering: change #root text-align from center to left

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ body {
   width: 1126px;
   max-width: 100%;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
   border-inline: none;
   min-height: 100svh;
   display: flex;
